--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -52,6 +52,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    namespace 'com.example.flutter_barcode_keyboard_listener_example'
 }
 
 flutter {
