--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,5 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/androidstudio
 
 .dart_tool/
+.pubignore
+local.properties
