--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -28,10 +28,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: $
+          java-version: ${{env.JAVA_VERSION}}
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: $
+          flutter-version: ${{env.FLUTTER_VERSION}}
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter test
