--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -8,6 +8,7 @@ on:
     branches: [master]
     paths-ignore:
       - '**/README.md'
+      - ".github/*"
   pull_request:
     branches: [master]
 
@@ -23,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       JAVA_VERSION: "11.0"
-      FLUTTER_VERSION: "2.5.3"
+      FLUTTER_VERSION: "3.3.2"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
