--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -5,12 +5,12 @@ name: Flutter testing
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [master]
+    branches: [main]
     paths-ignore:
       - '**/README.md'
       - ".github/*"
   pull_request:
-    branches: [master]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
