--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -5,12 +5,12 @@ name: Flutter testing
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [master]
+    branches: [main]
     paths-ignore:
       - '**/README.md'
       - ".github/*"
   pull_request:
-    branches: [master]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -26,11 +26,14 @@ jobs:
       JAVA_VERSION: "11.0"
       FLUTTER_VERSION: "3.3.8"
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Setup Java
+        uses: actions/setup-java@v1
         with:
           java-version: ${{env.JAVA_VERSION}}
-      - uses: subosito/flutter-action@v2
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{env.FLUTTER_VERSION}}
       - run: flutter pub get
