--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: ${{env.JAVA_VERSION}}
+          distribution: 'temurin'
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
