--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,26 +1,39 @@
-name: flutter_barcode_keyboard_listener
+name: qrcode_barcode_scanner
 description: Demonstrates how to use the flutter_barcode_keyboard_listener plugin.
-version: 0.0.2
-repository: "https://github.com/FrenkyDema/flutter_barcode_keyboard_listener"
-
+version: 0.1.0
+repository: "https://github.com/FrenkyDema/qrcode_barcode_scanner"
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: '>=2.18.4 <3.0.0'
   flutter: ">=2.5.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.1.3
+  plugin_platform_interface: ^2.1.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
 
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
+
+# The following section is specific to Flutter packages.
 flutter:
+  # This section identifies this Flutter project as a plugin project.
+  # The 'pluginClass' specifies the class (in Java, Kotlin, Swift, Objective-C, etc.)
+  # which should be registered in the plugin registry. This is required for
+  # using method channels.
+  # The Android 'package' specifies package in which the registered class is.
+  # This is required for using method channels on Android.
+  # The 'ffiPlugin' specifies that native code should be built and bundled.
+  # This is required for using `dart:ffi`.
+  # All these are used by the tooling to maintain consistency when
+  # adding or updating assets for this project.
   plugin:
     platforms:
       android:
-        package: com.example.flutter_barcode_keyboard_listener
-        pluginClass: FlutterBarcodeKeyboardListenerPlugin
+        package: com.example.qrcode_barcode_scanner
+        pluginClass: QrcodeBarcodeScannerPlugin
