--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.1.4
-
+  flutter_localizations:
+    sdk: flutter
+  flutter_keyboard_visibility: ^5.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
