--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,21 @@
 version: 2
 updates:
+  - package-ecosystem: "flutter"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    allow:
+      - dependency-type: "direct"
+        update-type: "semver:non-breaking"
+        labels:
+          - "dependencies"
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "daily"
+    allow:
+      - dependency-type: "direct"
+        update-type: "semver:non-breaking"
+        labels:
+          - "dependencies"
