--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,18 +4,14 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-    allow:
-      - dependency-type: "direct"
-        update-type: "semver:non-breaking"
-        labels:
-          - "dependencies"
+    open-pull-requests-limit: 99
+    labels:
+      - "dependencies"
 
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "daily"
-    allow:
-      - dependency-type: "direct"
-        update-type: "semver:non-breaking"
-        labels:
-          - "dependencies"
+    open-pull-requests-limit: 99
+    labels:
+      - "dependencies"
