--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -5,12 +5,12 @@ name: Flutter testing
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [main]
+    branches: ["main"]
     paths-ignore:
-      - '**/README.md'
+      - "**/README.md"
       - ".github/*"
   pull_request:
-    branches: [main]
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -32,7 +32,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: ${{env.JAVA_VERSION}}
-          distribution: 'temurin'
+          distribution: "temurin"
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
