--- a/.github/workflows/pull_request_automerge.yml
+++ b/.github/workflows/pull_request_automerge.yml
@@ -14,6 +14,7 @@ on:
 
 jobs:
   merge_dependabot:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - id: automerge
@@ -22,11 +23,11 @@ jobs:
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_LABELS: "dependencies"
-          MERGE_FILTER_AUTHOR: "dependabot"
+          MERGE_FILTER_AUTHOR: "dependabot[bot]"
           LOG: "TRACE"
           MERGE_METHOD: "squash"
-
+          
       - name: feedback
-        if: steps.automerge.outputs.mergeResult == "merged"
+        if: ${{ steps.automerge.outputs.mergeResult == 'merged' }}
         run: |
           echo "Pull request ${{ steps.automerge.outputs.pullRequestNumber }} merged!"
